@@ -209,14 +209,15 @@ cat_surf_display;
 function pushInteractiveHelp_Callback(hObject, eventdata, handles)
 web(fullfile(spm('Dir'),'toolbox','cat12','html','cat.html'));
 
-% --- Executes on button press in pushExit.
-function pushExit_Callback(hObject, eventdata, handles)
-F = spm_figure('FindWin','Menu');
-% close SPM windows, if no Menu window exist
-if isempty(F)
-  spm('Quit')
+% --- Executes on button press in pushMode.
+function pushMode_Callback(hObject, eventdata, handles)
+global expert
+
+if expert
+  spm_cat12;
+else
+  spm_cat12('expert');
 end
-close(gcf);
 
 % --- Executes on button press in pushBasicModels.
 function pushBasicModels_Callback(hObject, eventdata, handles)
@@ -489,6 +490,32 @@ h05 = uicontrol(...
 appdata = [];
 appdata.lastValidTag = 'popupVolumeTools_Callback';
 
+str_vol = {center('Volume Tools'),...
+	'Denoising Filter (SANLM)',...
+	'Automatically Set Origin Using Center-of-Mass',...
+	'Apply Deformations (Many Subjects)',...
+	'Apply Deformations (Many Images)',...
+	'Calculate Differences Between Volumes',...
+	'Calculate Volume Average'};
+userdata_vol = {...
+	'spm_jobman(''interactive'','''',''spm.tools.cat.tools.sanlm'');'...
+	'cat_vol_set_com;'...
+	'spm_jobman(''interactive'','''',''spm.tools.cat.tools.defs2'');'...
+	'spm_jobman(''interactive'','''',''spm.tools.cat.tools.defs'');'...
+	'cat_stat_diff'...
+	'spm_jobman(''interactive'','''',''spm.tools.cat.tools.avg_img'');'...
+	};
+			
+% add some expert entries
+if expert
+	str_vol = [str_vol, ...
+		{'Reduce Bounding Box (Data Trimming)'},...
+		{'Longitudinal Registration'}];
+	userdata_vol = [userdata_vol, ...
+		{'spm_jobman(''interactive'','''',''spm.tools.cat.tools.datatrimming'');'},...
+		{'spm_jobman(''interactive'','''',''spm.tools.cat.tools.series'')'}];
+end   
+
 h06 = uicontrol(...
   'Parent',h0,...
   'Units','pixels',...
@@ -498,50 +525,11 @@ h06 = uicontrol(...
   'TooltipString','Additional Volume Tools',...
   'CreateFcn', {@local_CreateFcn, blanks(0), appdata} ,...
   'Tag','popupVolumeTools',...
+  'String',str_vol,...
+  'UserData',userdata_vol,...
   'Value',1,...
   'FontSize',FS,...
   'FontName',get(0,'defaultuicontrolFontName'));
-
-	% add some expert entries
-	if expert
-		set(h06,...  
-			'String',{center('Volume Tools');...
-			'Denoising Filter (SANLM)';...
-				'Automatically Set Origin Using Center-of-Mass';...
-				'Apply Deformations (Many Subjects)';...
-				'Apply Deformations (Many Images)';...
-				'Calculate Differences Between Volumes';...
-				'Calculate Volume Average';...
-				'Reduce Bounding Box (Data Trimming)';...
-				'Longitudinal Registration'},...
-			'UserData',{...
-				'spm_jobman(''interactive'','''',''spm.tools.cat.tools.sanlm'');'...
-				'cat_vol_set_com;'...
-				'spm_jobman(''interactive'','''',''spm.tools.cat.tools.defs2'');'...
-				'spm_jobman(''interactive'','''',''spm.tools.cat.tools.defs'');'...
-				'cat_stat_diff'...
-				'spm_jobman(''interactive'','''',''spm.tools.cat.tools.avg_img'');'...
-				'spm_jobman(''interactive'','''',''spm.tools.cat.tools.datatrimming'');'...
-				'spm_jobman(''interactive'','''',''spm.tools.cat.tools.series'');'...
-			});
-	else
-		set(h06,...  
-			'String',{center('Volume Tools');...
-			'Denoising Filter (SANLM)';...
-				'Automatically Set Origin Using Center-of-Mass';...
-				'Apply Deformations (Many Subjects)';...
-				'Apply Deformations (Many Images)';...
-				'Calculate Differences Between Volumes';...
-				'Calculate Volume Average'},...
-			'UserData',{...
-				'spm_jobman(''interactive'','''',''spm.tools.cat.tools.sanlm'');'...
-				'cat_vol_set_com;'...
-				'spm_jobman(''interactive'','''',''spm.tools.cat.tools.defs2'');'...
-				'spm_jobman(''interactive'','''',''spm.tools.cat.tools.defs'');'...
-				'cat_stat_diff'...
-				'spm_jobman(''interactive'','''',''spm.tools.cat.tools.avg_img'');'...
-			});
-	end
 
 appdata = [];
 appdata.lastValidTag = 'popupSurfaceMeasures_Callback';
@@ -829,10 +817,10 @@ h22 = uicontrol(...
   'CreateFcn', {@local_CreateFcn, blanks(0), appdata} ,...
   'Tag','popupTransform',...
   'String',{  center('Transf. SPM Maps');...
-    'T-Maps (Volumes)';...
-    'F-Maps (Volumes)';...
-    'T-Maps (Surfaces)';...
-    'F-Maps (Surfaces)' },...
+    'T-Volume-Maps';...
+    'F-Volume-Maps';...
+    'T-Surface-Maps';...
+    'F-Surface-Maps' },...
   'UserData',{...
     'spm_jobman(''interactive'','''',''spm.tools.cat.tools.T2x'');'...
     'spm_jobman(''interactive'','''',''spm.tools.cat.tools.F2x'');'...
@@ -977,23 +965,25 @@ h34 = uicontrol(...
   'FontName',get(0,'defaultuicontrolFontName'));
 
 appdata = [];
-appdata.lastValidTag = 'pushExit_Callback';
+appdata.lastValidTag = 'pushMode_Callback';
 
 h35 = uicontrol(...
   'Parent',h0,...
   'Units','pixels',...
-  'String','Exit',...
+  'String','Switch to Expert Mode',...
   'Style','pushbutton',...
-  'ForegroundColor',[0.5 0 0],...
   'Position',[x2(2) yo x2w bh],...
-  'Callback',@(hObject,eventdata)cat12('pushExit_Callback',hObject,eventdata,guidata(hObject)),...
-  'TooltipString','Exit Through the Gift Shop',...
+  'Callback',@(hObject,eventdata)cat12('pushMode_Callback',hObject,eventdata,guidata(hObject)),...
+  'TooltipString','Switch Between Beginner and Expert Mode',...
   'CreateFcn', {@local_CreateFcn, blanks(0), appdata} ,...
-  'Tag','pushExit',...
+  'Tag','pushMode',...
   'UserData',[],...
   'FontSize',FS,...
   'FontName',get(0,'defaultuicontrolFontName'));
 
+if expert == 1
+  set(h35,'String','Switch to Beginner Mode');
+end
 %-------------------------------------------------------------------
 % set bottom box
 h40 = uicontrol(...
